fixed typo and normalised properties

--- a/BitBox/config1/configuration.properties
+++ b/BitBox/config1/configuration.properties
@@ -2,6 +2,8 @@ path = share
 port = 8201
 udpPort = 8201
 mode = udp
+udpTimeout = 10000
+udpRetries = 5
 advertisedName = localhost
 peers =
 maximumIncommingConnections = 2
