--- a/BitBox/config2/configuration.properties
+++ b/BitBox/config2/configuration.properties
@@ -2,6 +2,8 @@ path = share
 port = 8202
 udpPort = 8202
 mode = udp
+udpTimeout = 10000
+udpRetries = 5
 advertisedName = localhost
 peers = localhost:8201
 maximumIncommingConnections = 10
