--- a/BitBox/config5/configuration.properties
+++ b/BitBox/config5/configuration.properties
@@ -1,8 +1,12 @@
 path = share
-port = 8115
+port = 8305
+udpPort = 8205
+mode = udp
+udpTimeout = 10000
+udpRetries = 5
 clientPort = 8105
 advertisedName = localhost
-peers = localhost:8113
+peers = localhost:8204
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
