--- a/BitBox/config6/configuration.properties
+++ b/BitBox/config6/configuration.properties
@@ -1,8 +1,12 @@
 path = share
-port = 8116
+port = 8306
+udpPort = 8206
+mode = udp
+udpTimeout = 10000
+udpRetries = 5
 clientPort = 8106
 advertisedName = localhost
-peers = localhost:8114
+peers = localhost:8205,localhost:8202
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
