--- a/BitBox/config_public/configuration.properties
+++ b/BitBox/config_public/configuration.properties
@@ -5,7 +5,7 @@ udpTimeout = 10000
 udpRetries = 5
 mode = udp
 advertisedName = 101.161.99.175
-peers = 43.240.99.82:9111
+peers = 43.240.99.82:9111,localhost:8205
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
