--- a/BitBox/config3/configuration.properties
+++ b/BitBox/config3/configuration.properties
@@ -2,6 +2,8 @@ path = share
 port = 8203
 udpPort = 8203
 mode = udp
+udpTimeout = 10000
+udpRetries = 5
 advertisedName = localhost
 peers = localhost:8202
 maximumIncommingConnections = 10
