--- a/BitBox/config4/configuration.properties
+++ b/BitBox/config4/configuration.properties
@@ -1,7 +1,11 @@
 path = share
-port = 8114
+port = 8304
+udpPort = 8204
+mode = udp
+udpTimeout = 10000
+udpRetries = 5
 advertisedName = localhost
-peers = localhost:8112
+peers = localhost:8203
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
