fixed many concurrency issues, added continuing peer logs

--- a/BitBox/config1/configuration.properties
+++ b/BitBox/config1/configuration.properties
@@ -1,12 +1,12 @@
 path = share
 port = 8201
-udpPort = 8201
+udpPort = 8301
 mode = udp
 udpTimeout = 10000
 udpRetries = 5
 advertisedName = localhost
-peers =
-maximumIncommingConnections = 2
+peers = localhost:8302,localhost:8300
+maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
 clientPort = 8101
