--- a/BitBox/config5/configuration.properties
+++ b/BitBox/config5/configuration.properties
@@ -1,12 +1,12 @@
 path = share
 port = 8305
-udpPort = 8205
+udpPort = 8305
 mode = udp
 udpTimeout = 10000
 udpRetries = 5
 clientPort = 8105
 advertisedName = localhost
-peers = localhost:8204
+peers = localhost:8304,localhost:8300
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
