--- a/BitBox/config6/configuration.properties
+++ b/BitBox/config6/configuration.properties
@@ -1,12 +1,12 @@
 path = share
-port = 8306
-udpPort = 8206
+port = 8206
+udpPort = 8316
 mode = udp
 udpTimeout = 10000
 udpRetries = 5
 clientPort = 8106
 advertisedName = localhost
-peers = localhost:8205,localhost:8202
+peers = localhost:8305,localhost:8302,localhost:8300
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
