--- a/BitBox/config_public/configuration.properties
+++ b/BitBox/config_public/configuration.properties
@@ -5,8 +5,8 @@ udpTimeout = 10000
 udpRetries = 5
 mode = udp
 advertisedName = 101.161.99.175
-peers = 43.240.99.82:9111,localhost:8205
-maximumIncommingConnections = 10
+peers = 43.240.99.82:9111
+maximumIncommingConnections = 100
 blockSize = 1048576
 syncInterval = 60
 clientPort = 8100
