--- a/BitBox/config2/configuration.properties
+++ b/BitBox/config2/configuration.properties
@@ -1,11 +1,11 @@
 path = share
 port = 8202
-udpPort = 8202
+udpPort = 8302
 mode = udp
 udpTimeout = 10000
 udpRetries = 5
 advertisedName = localhost
-peers = localhost:8201
+peers = localhost:8301,localhost:8300
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
