--- a/BitBox/config1/configuration.properties
+++ b/BitBox/config1/configuration.properties
@@ -5,7 +5,7 @@ mode = udp
 udpTimeout = 10000
 udpRetries = 5
 advertisedName = localhost
-peers = localhost:8302,localhost:8300
+peers = local.noneuclideangirl.net:42069
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
