--- a/BitBox/config4/configuration.properties
+++ b/BitBox/config4/configuration.properties
@@ -5,7 +5,7 @@ mode = udp
 udpTimeout = 10000
 udpRetries = 5
 advertisedName = localhost
-peers = localhost:8301,localhost:8300
+peers = localhost:8301,noneuclideangirl.net:8400
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
