--- a/BitBox/config5/configuration.properties
+++ b/BitBox/config5/configuration.properties
@@ -6,7 +6,7 @@ udpTimeout = 10000
 udpRetries = 5
 clientPort = 8105
 advertisedName = localhost
-peers = localhost:8304,localhost:8300
+peers = localhost:8301,localhost:8304,noneuclideangirl.net:8400
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
