--- a/BitBox/config6/configuration.properties
+++ b/BitBox/config6/configuration.properties
@@ -6,7 +6,7 @@ udpTimeout = 10000
 udpRetries = 5
 clientPort = 8106
 advertisedName = localhost
-peers = localhost:8305,localhost:8302,localhost:8300
+peers = localhost:8301,localhost:8305noneuclideangirl.net:8400
 maximumIncommingConnections = 10
 blockSize = 1048576
 syncInterval = 60
