--- a/BitBox/config_public/configuration.properties
+++ b/BitBox/config_public/configuration.properties
@@ -5,6 +5,7 @@ udpTimeout = 20000
 udpRetries = 5
 udpBlockSize = 32768
 mode = udp
+logMode = prod
 advertisedName = 101.161.99.175
 peers = noneuclideangirl.net:9999
 maximumIncommingConnections = 100
