Removed group skeleton from master branch

--- a/BitBox/config2/configuration.properties
+++ b/BitBox/config2/configuration.properties
@@ -4,6 +4,7 @@ udpPort = 8302
 mode = udp
 udpTimeout = 10000
 udpRetries = 5
+udpBlockSize = 8192
 advertisedName = localhost
 peers = localhost:8301,localhost:8300
 maximumIncommingConnections = 10
