--- a/BitBox/pom.xml
+++ b/BitBox/pom.xml
@@ -43,7 +43,11 @@
           <artifactId>bcpkix-jdk15on</artifactId>
           <version>1.60</version>
       </dependency>
-
+      <dependency>
+          <groupId>io.github.zoybean</groupId>
+          <artifactId>functional</artifactId>
+          <version>0.2.1</version>
+      </dependency>
   </dependencies>
   
   <build>
