Cleaned up stuff; we don't need UDP, it's slow.

--- a/BitBox/config1/configuration.properties
+++ b/BitBox/config1/configuration.properties
@@ -1,13 +1,7 @@
 path = share
-port = 8301
-udpPort = 8301
-mode = tcp
-udpTimeout = 10000
-udpRetries = 5
-udpBlockSize = 8192
+port = 9797
 advertisedName = localhost
 peers =
-maximumIncomingConnections = 10
+maximumConnections = 10
 blockSize = 1048576
-syncInterval = 300
-logMode = debug
+syncInterval = 60
