--- a/BitBox/config2/configuration.properties
+++ b/BitBox/config2/configuration.properties
@@ -1,13 +1,7 @@
 path = share
-port = 8302
-udpPort = 8302
-mode = tcp
-udpTimeout = 10000
-udpRetries = 5
-udpBlockSize = 8192
+port = 9798
 advertisedName = localhost
-peers = localhost:8301,localhost:8300
-maximumIncomingConnections = 10
+peers = localhost:9797
+maximumConnections = 10
 blockSize = 1048576
 syncInterval = 60
-logMode = debug
