Added basic daemon/client functionality to support the server use case (#5)

--- a/BitBox/config2/configuration.properties
+++ b/BitBox/config2/configuration.properties
@@ -1,5 +1,7 @@
+mode = release
 path = share
 port = 9798
+clientPort = 21980
 advertisedName = localhost
 peers = localhost:9797
 maximumConnections = 10
